Reworded latest post

--- a/_posts/2016-02-21-week5.md
+++ b/_posts/2016-02-21-week5.md
@@ -44,6 +44,6 @@ to do is copy-paste into the text field and share.
 
 Another fun fact I learned recently is that Github will render emojis in
 commit messages. Some may find this useful (or entertaining at the very
-least) if, like me, you find that words alone cannot express the
+least) if, like me, you sometimes find that words alone cannot express the
 significance of a commit. Here is a [cheatsheet](http://www.emoji-cheat-sheet.com/)
 for the different emojis supported by Github and many other tools.
